# ble-audio-platform

./: LICENSE  README.md
Firmware/bap_broadcast_sink/: CMakeLists.txt  Custom_Board.overlay  Kconfig  prj.conf
Firmware/bap_broadcast_sink/MyBoard/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  bap_broadcast_sink_sysbuild_cache.txt.tmp  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  hci_ipc_sysbuild_cache.txt  hci_ipc_sysbuild_cache.txt.tmp
Firmware/bap_broadcast_sink/MyBoard/_sysbuild/: autoconf.h  cmake_install.cmake
Firmware/bap_broadcast_sink/MyBoard/bap_broadcast_sink/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  build_info.yml.bak  cmake_install.cmake  compile_commands.json
Firmware/bap_broadcast_sink/boards/: nrf5340_audio_dk_nrf5340_cpuapp.conf
Firmware/bap_broadcast_sink/src/: codec_output.c  codec_output.h  codec_sgtl5000.c  codec_sgtl5000.h  i2c_helpers.c  i2c_helpers.h  lc3.c  main.c  pmic.c  pmic.h  stream_rx.h
Firmware/bap_broadcast_source/: CMakeLists.txt  Custom_Board.overlay  Kconfig  prj.conf
Firmware/bap_broadcast_source/boards/: nrf5340_audio_dk_nrf5340_cpuapp.conf  nrf5340_audio_dk_nrf5340_cpuapp.overlay
Firmware/bap_broadcast_source/dongle/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  bap_broadcast_source_sysbuild_cache.txt.tmp  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml
Firmware/bap_broadcast_source/src/: codec_sgtl5000.c  codec_sgtl5000.h  i2c_helpers.c  i2c_helpers.h  main.c  pmic.c
(+328 files in other folders)
